--- a/sass/parts/_latex.scss
+++ b/sass/parts/_latex.scss
@@ -4,5 +4,7 @@
  horizontal scrolling.
  */
 mjx-container {
+  padding-top: 10px; // increase padding to improve readability
+  padding-bottom: 10px; // increase padding to improve readability
   overflow-x: auto;
 }
